[feature/bot-message-queue] Reworked binance bot
