# shared/generated/openapi-v1.json
@@ -1318,18 +1318,6 @@
         ],
         "operationId": "updateTraderCuration",
         "description": "Update curation",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "description": "Trader ID",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        ],
         "requestBody": {
           "content": {
             "application/json": {
@@ -2976,10 +2964,13 @@
         "type": "object",
         "properties": {
           "id": {
+            "type": "number"
+          },
+          "name": {
             "type": "string",
             "nullable": false
           },
-          "name": {
+          "clientId": {
             "type": "string",
             "nullable": false
           },
